style.css
/*
===================================
===================================
Global styles

- The is the file for CSS that applies to the entire site.
- Variables, resets, global styles, etc. should be added here.
- This file should be linked to every page on the site.
- We can also add global component styles here (buttons, forms, etc.)
===================================
===================================
*/

/* 
===================================
Resets (box-sizing, normalize, etc.) 
===================================
*/

html {
	box-sizing: border-box;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

/* 
===================================
Variables (colors, text, spacing, etc.)
===================================
*/

:root {
	/* Color Definitions */
	--color-white: #fff;
	--color-black: #000;
	--color-beige: #F5F5DC;
	--color-navy: #000080;
	--color-neutral-gray: #ccc;
	--color-transparent-white: #ffffff2d;
	--color-slate-grey: #e3e7e882;
	--color-purple: #e041df;

	/* Color Assignment */
	--body-background-color: var(--color-white);

	/* Text */
	/* Font Sizes */
	--font-mobile-sm: 0.9rem;
	--font-mobile-md: 1.313rem;
	--font-mobile-lg: 2rem;
	--font-sm: 1rem;
	--font-md: 1.5rem;
	--font-lg: 3rem;
	--font-xxl: 4rem;
	/* Font Family */
	--main-heading-font: "Cinzel", Georgia, serif;
	--sub-heading-font: "Josefin Sans", Helvetica, "Open Sans", Arial, sans-serif;
	--body-font: "Inter", "Open Sans", Arial, sans-serif;
	/* Line Height */

	/* Spacing */
	--spacing-sm: 10px;
	--spacing-md: 20px;
	--spacing-lg: 30px;

	/* Border Radius */
	--radius-sm: 10px;
	--radius-md: 20px;
	
	/* Wrappers */
	--wrapper-max: 1400px

	/* Media Queries */
}

/* 
===================================
Global Styles (html, body, text, links, etc.)
===================================
*/

html {
	font-size: var(--font-sm);
}

body {
	color: var(--color-white);
	background: var(--color-purple);
	background: linear-gradient(
		9deg,
		rgba(224, 65, 223, 1) 10%,
		rgba(35, 34, 135, 1) 46%,
		rgba(35, 34, 135, 1) 84%,
		rgba(40, 104, 191, 1) 97%
	);
}

/* Images */

img {
	max-width: 100%;
}

/* Text */

h1 {
	font-family: var(--main-heading-font);
	font-size: var(--font-xxl);
}

h2 {
	font-size: var(--font-lg);
}

p {
	font-family: var(--body-font);
	font-size: var(--font-md);
}

/* Links */

a {
	color: var(--color-white);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

/* Lists */

/* Forms */

/* 
===================================
Wrappers (container, flexbox, etc.)
===================================
*/

/* Container */

/* Wrappers */
.wrapper {
	max-width: var(--wrapper-max);
	width: 85%;
}
/* 
===================================
Global Component Styles (buttons, forms, etc.)
===================================
*/

/* Buttons */

/* Forms */

/* Utility Classes */
.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	margin: -1px;
	border: 0;
	padding: 0;
	white-space: nowrap;
	clip-path: inset(100%);
	clip: rect(0 0 0 0);
	overflow: hidden;
}

/* HEADER */

header {
	width: 90%;
	margin: 30px auto;
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 90%;
	margin: 30px auto;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.top-logo {
	display: flex;
	gap: var(--spacing-sm);
	align-items: center;
	display: flex;
	align-items: center;
}

.top-logo p{
	font-family: var(--main-heading-font);
	font-weight: 700;
}

.top-logo img {
	width: 70px;
}

.top-links {
	display: flex;
	align-items: center;
	padding-left: 0;
	
}

.top-links li {
	list-style-type: none;
	padding: var(--spacing-sm);
	font-family: var(--body-font);
	font-size: var(--font-md);
}

.top-links li a {
	font-size: var(--font-md);
}

/* HERO SECTION */

.hero {
	width: 90%;
	height: 80vh;
	margin: 80px auto;
	display: flex;
	align-items: center;
	justify-content: center;
}

.hero-content {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: var(--spacing-md);
}

.hero-text {
	width: 680px;
	padding: 70px 150px;
	background-image: url(./assets/home-blob.svg);
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
}
.hero-logo {
	width: 40%;
	display: flex;
	justify-content: center;
	align-items: center;
}

/* .hero-logo img {
	max-width: 650px;
} */

.left-fade {
	background: linear-gradient(to left, rgba(0, 0, 0, 0.368), transparent 70%);
}

.right-fade {
	background: linear-gradient(to right, rgba(0, 0, 0, 0.368), transparent 70%);
}


/* HOMEPAGE MAIN CONTENT */
.homepage-content {
	width: 80%;
	margin: 60px auto;
	display: flex;
	gap: 80px;
	border-radius: 30px;
}

.home-text {
	padding: var(--spacing-lg);
	border-radius: var(--radius-sm);
}

.homepage-content img {
	width: 50%;
}

/* STAY UPDATED */
.stay-updated {
	width: 65%;
	max-width: 1120px;
	margin: 200px auto;
	text-align: center;
	background: rgba(0, 0, 0, 0.368);
	border-radius: 30px;
	padding: 50px 80px;
}

.stay-updated h2 {
	margin: 0;
}

form {
	width: 100%;
}

input[type="text"] {
	padding: var(--spacing-sm);
	border: 1px solid var(--color-neutral-gray);
	border-radius: var(--radius-md);
}

[type="submit"],
button {
	margin-left: var(--spacing-sm);
	padding: 10px 30px;
	border: none;
	border-radius: var(--radius-md);
	background-color: var(--color-navy);
	color: var(--color-beige);
}

/* contact form */
.form-title {
	text-align: center;
}
.form-info {
	text-align: center;
}
.contact-form {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: var(--spacing-sm);
}
.form-info h2 {
	padding-bottom: 0px;
}
.contact-form input,
.contact-form textarea {
	font-family: var(--body-font);
	width: 70%;
	max-width: 500px;
	border: none;
	border-radius: 4px;
	padding: var(--spacing-sm);
	background-color: var(--color-white);
}

/* FOOTER */
footer {
	width: 100%;
	height: 80px;
	margin: 0 auto;
	display: flex;
	background-color: var(--color-slate-grey);
}

.footer-content {
	width: 90%;
	margin: 0 auto;
	display: flex;
	justify-content: space-between;
	align-items: center;
	color: var(--color-black);
}

.footer-logo {
	display: flex;
	justify-content: space-between;
	align-items: center;
	gap: var(--spacing-sm);
}

.footer-logo img {
	width: 70px;
}

/* 
===================================
Media Queries (overriding styles for different screen sizes)
Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Home Page Hero */
@media (max-width: 1300px) {
	.hero-text h1 {
		font-size: var(--font-lg);
	}
}

/* Tablet & Smaller */
@media (max-width: 768px) {
}

/* Tablet Only */
@media (min-width: 768px) and (max-width: 1024px) {
	.hero-text {
		padding: 70px 90px;
    	width: 500px;
	}

	.hero-text h1 {
		font-size: var(--font-mobile-lg);
	}
}

/* Phone Only */
@media (max-width: 480px) {
}

